--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,29 @@
-name: prueba devops
+name: Prueba Devops
 
 on:
   push:
     branches: main
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout código
       uses: actions/checkout@v3
-      
+
+    - name: Instalar Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        run:
+          echo "Se instala node.js"
+          
+    - name: Instalar dependencias
+      run: npm install
+
     - name: Simular despliegue
-      run: |
-        echo "Hola Mundo"
+      run: 
+        echo "Hola mundo"
+    
