--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        run:
-          echo "Se instala node.js"
 
     - name: Simular despliegue
       run: 
         echo "Hola mundo"
+        echo "Se instalan dependencias node.js"
+        echo "Simulamos despliegue, pepiline activo con un push en main"
     
