--- a/.github/workflows/PruebaDevops.yml
+++ b/.github/workflows/PruebaDevops.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Simular despliegue
       run: 
-        echo "\n Hola mundo."
-        echo "\n Se instalan dependencias node.js."
-        echo "\n Simulamos despliegue, pepiline activo con un push en main."
+        echo "Hola mundo."
+        echo -e "\n Se instalan dependencias node.js."
+        echo -e "\n Simulamos despliegue, pepiline activo con un push en main."
     
